--- a/css/styles.css
+++ b/css/styles.css
@@ -549,6 +549,10 @@ margin-bottom: 50px;
     padding-bottom: 60px;
 }
 
+.footer-adress{
+    flex-grow: 1;
+}
+
 .footer-adress-nav{
     margin-top: 20px;
 }
@@ -821,8 +825,6 @@ margin-bottom: 50px;
 .backdrop-contact-form{
     display: flex;
     flex-direction: column;
-    width: 448px;
-    height: 342px;
 }
 
 .backdrop-contact-form-desc{
@@ -851,8 +853,8 @@ margin-bottom: 50px;
     transition: fill var(--transition-duration) var(--timing-function);
 }
 
-.backdrop-form-field{
-    margin-bottom: 10px;
+.backdrop-form-field:not(:first-child) {
+    margin-top: 10px;
 }
 
 .contact-form-input{
@@ -875,11 +877,11 @@ margin-bottom: 50px;
 }
 
 .contact-form-message{
+    display: block;
     resize: none;
     width: 100%;
     height: 120px;
     padding: 12px 16px;
-    margin-bottom: 20px;
     border: 1px solid var(--input-border-color);
     border-radius: 4px;
     transition: border-color var(--transition-duration) var(--timing-function);
@@ -903,13 +905,14 @@ margin-bottom: 50px;
 .backdrop-form-check-desc{
     display: flex;
     align-items: center;
+    justify-content: center;
+    margin-top: 20px;
     margin-bottom: 30px;
 
     font-family: 'Roboto', sans-serif;
         font-weight: 400;
         font-size: 14px;
         line-height: 1.71;
-    
         letter-spacing: 0.03em;
         color: var(--primary-text-color);
 }
@@ -928,22 +931,17 @@ margin-bottom: 50px;
 
 .backdrop-form-check:checked + .backdrop-form-check-desc::before{
     background-color: var(--accent-text-color);
-    border: none;
     background-image: url(../images/Vector.svg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: 11px;
-    border: 0.2px solid var(--white-text-color);
+    transition: background-color var(--transition-duration) var(--timing-function);
+    border: none;
+    /* border: 0.2px solid var(--white-text-color); */
 }
 
 .backdrop-form-check:focus + .backdrop-form-check-desc::before{
-    background-color: var(--accent-text-color);
-        border: none;
-        background-image: url(../images/Vector.svg);
-        background-position: center;
-        background-repeat: no-repeat;
-        background-size: 11px;
-        border: 0.2px solid var(--white-text-color);
+    border: 2px solid var(--accent-text-color);
 }
 
 
